Added two cards

--- a/index.html
+++ b/index.html
@@ -202,6 +202,26 @@
     </div>
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
+        <div class="Publications aphasia cost-effectiveness multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
+            <a href="https://doi.org/10.1161/STROKEAHA.123.045183" target="">
+                <div class="cardUpper" >
+                    <img src="images/costeffectiveness.jpg" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Cost Effectiveness of high intensity aphasia therapy vs usual care
+                </div>
+            </a>
+        </div>
+        <div class="Publications aphasia intensity ICAPs">
+            <a href="papers/2024 The I in ICAPs - Examining Treatment Intensity Under the microscope (accepted manuscript).pdf" target="">
+                <div class="cardUpper" >
+                    <img src="images/MDAFschematic.jpg" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    The “I” in ICAPs: examining treatment intensity under the microscope
+                </div>
+            </a>
+        </div>
         <div class="aphasia technology artificial_intelligence AI_images">
             <a href="AI_images.html" target="">
                 <div class="cardUpper" >
