Add WFNR presentations

--- a/CV.html
+++ b/CV.html
@@ -753,6 +753,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+                <p>Wong, D., Rose, A., Blake, J., Power, E., Kneebone, I., Stolwyk, R., Gracey, F., Thomas, S., <b>Pierce, J.</b>, & Evans, J. Towards accessible, tailored assessment of mood in people with moderate-severe cognitive and communication impairments following acquired brain injury. [Datablitz presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.</p>
                 <p><b>Pierce, J. E.</b>, Hill, A., Wong, D., Pitt, R., Rose, M. (November, 2023). <i>Co-design and testing of Multi-Modality Aphasia Therapy Tele, a telehealth adaptation of an evidence-based, group aphasia intervention.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
                 <p><b>Pierce, J. E.</b> (November, 2023). <i>Exploring AI-generated images for aphasia therapy and assessments.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
                 <p><b>Pierce, J. E.</b>, Lazzarotto, M. T., Vuong, G., & Kambanaros, M. (November, 2023). <i>Development of free online aphasia therapy for Mandarin, Vietnamese, and Greek speakers.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
@@ -966,6 +967,9 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+                <div class="poster">
+                  Ottaway, G., Nicola, E., Stolwyk, R., Gracey, F., Evans, J., Blake, J., Kneebone, I., Power, E., Rose, A., Thomas, S., <b>Pierce, J.</b> & Wong, D. Identifying key concepts in measures of depression and anxiety used with acquired brain injury cohorts. [Poster presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.
+                </div>
                 <div class="poster">
                     <p><b>Pierce,
                     J. E.</b>,
