--- a/CV.html
+++ b/CV.html
@@ -329,6 +329,10 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+                <p>
+                  Adikari, A., <b>Pierce, J. E.</b>, Alahakoon, D. (2024). <i>AI-empowered personalised communication assistant.</i> La Trobe Business School Small Grant, La Trobe University, Australia. ($5000 - successful).
+                </p>
+          
                 <p><b>Pierce, J. E.</b>. (2023). <i>Future Leaders Grant</i>, Stroke Foundation, Melbourne, VIC. ($15,000 – successful).</p>
             <p>Lanyon, L.,
                 Shiggins, C., <b>Pierce, J. E.</b>, Rademaker, B., Sayner, A., Ermert, M., Ermert, K., Pettigrove, K., Rose,
