--- a/CV.html
+++ b/CV.html
@@ -408,6 +408,9 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+          <p>
+            Watanabe, M., Cartwright, J., & <b>Pierce, J. E.</b> (2024). Positive effects of speech and language therapy group interventions in primary progressive aphasia: A systematic review. International Journal of Language & Communication Disorders, <i>early online</i>. <a href='https://doi.org/10.1111/1460-6984.13031'>https://doi.org/10.1111/1460-6984.13031</a>
+          </p>
             <p>
                 Griffin-Musick, J., Harvey, S., <b>Pierce, J. E.</b>, Fahey, D., & Off, C. (2024). The “I” in ICAPs: examining treatment intensity under the microscope. <i>Aphasiology</i>, 1-29. <a href="https://doi.org/10.1080/02687038.2024.2317920">https://doi.org/10.1080/02687038.2024.2317920</a>
             </p>
@@ -973,7 +976,7 @@
                 <div class="rightColMask"></div>
             </div>
                 <div class="poster">
-                  Ottaway, G., Nicola, E., Stolwyk, R., Gracey, F., Evans, J., Blake, J., Kneebone, I., Power, E., Rose, A., Thomas, S., <b>Pierce, J.</b> & Wong, D. Identifying key concepts in measures of depression and anxiety used with acquired brain injury cohorts. [Poster presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.
+                  <p>Ottaway, G., Nicola, E., Stolwyk, R., Gracey, F., Evans, J., Blake, J., Kneebone, I., Power, E., Rose, A., Thomas, S., <b>Pierce, J.</b> & Wong, D. Identifying key concepts in measures of depression and anxiety used with acquired brain injury cohorts. [Poster presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.</p>
                 </div>
                 <div class="poster">
                     <p><b>Pierce,
@@ -1218,7 +1221,7 @@
                   <td valign=top>
                   <p><a
                   href="http://www.twitter.com/JohnPierce85">Twitter</a></p>
-                  <p>2,124 followers</p>
+                  <p>2,100 followers</p>
                   </td>
                  </tr>
                  <tr>
