--- a/CV.html
+++ b/CV.html
@@ -411,6 +411,13 @@
           <p>
             Watanabe, M., Cartwright, J., & <b>Pierce, J. E.</b> (2024). Positive effects of speech and language therapy group interventions in primary progressive aphasia: A systematic review. International Journal of Language & Communication Disorders, <i>early online</i>. <a href='https://doi.org/10.1111/1460-6984.13031'>https://doi.org/10.1111/1460-6984.13031</a>
           </p>
+          <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1111/1460-6984.13031"></div>
+                        </td>
+                    </tr>
+                </table>
             <p>
                 Griffin-Musick, J., Harvey, S., <b>Pierce, J. E.</b>, Fahey, D., & Off, C. (2024). The “I” in ICAPs: examining treatment intensity under the microscope. <i>Aphasiology</i>, 1-29. <a href="https://doi.org/10.1080/02687038.2024.2317920">https://doi.org/10.1080/02687038.2024.2317920</a>
             </p>
