--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
     </div>
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
+        <div class="Publications Primary_Progressive_Aphasia">
+            <a href="http://doi.org/10.1111/1460-6984.13031" target="">
+                <div class="cardUpper" >
+                    <img src="images/PPAvenn.jpg" alt="" style="width: 75%;margin-top:-2rem"/>
+                </div>
+                <div class="cardLower">
+                    Review of the evidence for groups in PPA
+                </div>
+            </a>
+        </div>
         <div class="Publications aphasia cost-effectiveness multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
             <a href="https://doi.org/10.1161/STROKEAHA.123.045183" target="">
                 <div class="cardUpper" >
