--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
         <div class="Publications Primary_Progressive_Aphasia">
-            <a href="http://doi.org/10.1111/1460-6984.13031" target="">
+            <a href="PPAgroups.html" target="">
                 <div class="cardUpper" >
                     <img src="images/PPAvenn.jpg" alt="" style="width: 75%;margin-top:-2rem"/>
                 </div>
