--- a/CV.html
+++ b/CV.html
@@ -408,6 +408,26 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <p>
+                <b>Pierce, J. E.</b>, Cavanaugh, R., Harvey, S., Dickey, M. W., Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A. M., Carragher, M., Wilcox, C., & Rose, M. L. (2024). High-Intensity Aphasia Intervention Is Minimally Fatiguing in Chronic Aphasia: An Analysis of Participant Self-Ratings From a Large Randomized Controlled Trial. Stroke, 55.<a href='https://doi.org/10.1161/STROKEAHA.123.046031'>https://doi.org/10.1161/STROKEAHA.123.046031</a>
+              </p>
+              <table>
+                        <tr>
+                            <td>
+                                <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1161/STROKEAHA.123.046031"></div>
+                            </td>
+                        </tr>
+                    </table>
+            <p>
+                <b>Pierce, J. E.</b>, Cavanaugh, R., Harvey, S., Dickey, M. W., Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A. M., Carragher, M., Wilcox, C., & Rose, M. L. (2024). High-Intensity Aphasia Intervention Is Minimally Fatiguing in Chronic Aphasia: An Analysis of Participant Self-Ratings From a Large Randomized Controlled Trial. Stroke, 55.<a href='https://doi.org/10.1161/STROKEAHA.123.046031'>https://doi.org/10.1161/STROKEAHA.123.046031</a>
+              </p>
+              <table>
+                        <tr>
+                            <td>
+                                <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1161/STROKEAHA.123.046031"></div>
+                            </td>
+                        </tr>
+                    </table>
           <p>
             Watanabe, M., Cartwright, J., & <b>Pierce, J. E.</b> (2024). Positive effects of speech and language therapy group interventions in primary progressive aphasia: A systematic review. International Journal of Language & Communication Disorders, <i>early online</i>. <a href='https://doi.org/10.1111/1460-6984.13031'>https://doi.org/10.1111/1460-6984.13031</a>
           </p>
