--- a/PPAgroups.html
+++ b/PPAgroups.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="mid" style="text-align: center;">
-            <img src="images/PPAvenn.jpg" alt="venn diagram of 10 retrieved studies" style="max-width: 600px; border-radius: 1rem;">
+            <img src="images/PPAvenn.jpg" alt="venn diagram of 10 retrieved studies" style="max-width: 600px; border-radius: 1rem; width: 100%;">
         </div>
     </div >
     <div class="dark" style="text-align:center">
