Color recruitment card

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="cardUpper" >
                     <img src="images/MMATTele.jpg" alt="" style="width: 100%;"/>
                 </div>
-                <div class="cardLower">
+                <div class="cardLower" style="background: #dbe8ff;">
                     <span style="font-size: 1.2rem;font-weight: 600;"><span style="font-size: 1.2rem;font-weight: 600;color: #4472C4;">Currently recruiting:</span> Online aphasia therapy trial - M-MAT Tele</span>
                     <br>
                     <span style="font-weight: 300;">Looking for Australians with aphasia 🇦🇺</span>
