--- a/CV.html
+++ b/CV.html
@@ -432,6 +432,17 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
+                Pallewela, N., Alahakoon, D., Adikari, A., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Optimizing Speech Emotion Recognition with Machine Learning Based Advanced Audio Cue Analysis. <i>Technologies, 12</i>(7), Article 7. https://doi.org/10.3390/technologies12070111
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.3390/technologies12070111"></div>
+                    </td>
+                </tr>
+            </table>
+
+            <p>
               <b>Pierce, J. E.</b>, Hill, A. J., Wong, D., Pitt, R., & Rose, M. L. (2024). Adapting a group-based, multimodal aphasia treatment for telehealth – co-design of M-MAT Tele. <i>Disability and Rehabilitation: Assistive Technology.</i> <a href="https://doi.org/10.1080/17483107.2024.2366423">https://doi.org/10.1080/17483107.2024.2366423</a>
             </p>
             <table>
