Reword open access

--- a/fatigue.html
+++ b/fatigue.html
@@ -27,7 +27,7 @@
     <h3>John E. Pierce, Robert Cavanaugh, Sam Harvey, Michael Walsh Dickey, Lyndsey Nickels, David Copland, Leanne Togher, Erin Godecke, Marcus Meinzer, Tapan Rai, Dominique A. Cadilhac, Joosup Kim, Melanie Hurley, Abby M. Foster, Marcella Carragher, Cassie Wilcox, Miranda L. Rose</h3>
     <div style="text-align: center;">
         <a href="https://www.ahajournals.org/eprint/VDFRJEISZFQFMIEUYITK/full?redirectUri=%2Fdoi%2F10.1161%2FSTROKEAHA.123.046031" div class="paperbutton">
-            <img class="pdfsvg" src="images/pdf_light.svg">Open access article
+            <img class="pdfsvg" src="images/pdf_light.svg">Free access to article
         </a>
     </div>
     <p style="text-align: justify;margin-bottom: 3rem;">
