Add Shrubsole et al 2024

--- a/CV.html
+++ b/CV.html
@@ -432,6 +432,16 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
+              Shrubsole, K., Stone, M., Cadilhac, D. A., Kilkenny, M. F., Power, E., Lynch, E., <b>Pierce, J. E.,</b>, Copland, D., Godecke, E., Burton, B., Brogan, E. & Wallace, S. J. (2024). Establishing Quality Indicators and Implementation Priorities for Post-Stroke Aphasia Services Through End-User Involvement. Health expectations: an international journal of public participation in health care and health policy, 27(5), e14173. doi: <a href='doi.org/10.1111/hex.14173'>10.1111/hex.14173</a>
+            </p>
+              <table>
+                  <tr>
+                      <td>
+                          <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1111/hex.14173"></div>
+                      </td>
+                  </tr>
+              </table>
+            <p>
                 Pallewela, N., Alahakoon, D., Adikari, A., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Optimizing Speech Emotion Recognition with Machine Learning Based Advanced Audio Cue Analysis. <i>Technologies, 12</i>(7), Article 7. https://doi.org/10.3390/technologies12070111
             </p>
             <table>
