Add German poster

--- a/CV.html
+++ b/CV.html
@@ -1086,6 +1086,9 @@
                 <div class="rightColMask"></div>
             </div>
                 <div class="poster">
+                    Werner, L., Hußmann, K., Peitz, D., <b>Pierce, J. E</b>. (November, 2024). Mediengestütztes Eigentraining bei Aphasie mit aphasiatherapyonline.com: Erstellung und Erprobung der deutschen Version [Poster]. Gesellschaft für Aphasieforschung und -behandlung, Leipzig, Germany.
+                </div>
+                <div class="poster">
                     <p>Adikari, A., <b>Pierce, J. E.</b>, Pallewela, N., Wong, D., Kneebone, I., Ryan, B., Hernandez, N., Bremner, T., Bremner, S., Barron, K., Alahakoon, D., Rose, M. (July, 2024). The Mood Tracker app – a co-designed tool for aphasia-friendly monitoring and management of mood. [Poster]. International Aphasia Rehabilitation Conference, Brisbane, Australia.
                         </p>
                     <p>
