Add Rose peer led paper

--- a/CV.html
+++ b/CV.html
@@ -432,6 +432,16 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
+              Rose, M. L., Wilcox, C., Attard, M., <b>Pierce, J. E.</b>, Shiggins, C., Lanyon, L., Wong, D., Fenner, P., & Carragher, M. (early online). Acceptability, feasibility and preliminary efficacy of the Peer-led Hub-and-Spoke Community Aphasia Group program. Aphasiology, 0(0), 1–22. <a href="https://doi.org/10.1080/02687038.2024.2410766">doi: 10.1080/02687038.2024.2410766</a>
+            </p>
+                <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/02687038.2024.2410766"></div>
+                        </td>
+                    </tr>
+              </table>
+            <p>
               Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. Disability and Rehabilitation, 1–12. <a href="https://doi.org/10.1080/09638288.2024.2399221">doi: 10.1080/09638288.2024.2399221</a>
             </p>
             <table>
