Update publication metadata

--- a/CV.html
+++ b/CV.html
@@ -432,7 +432,7 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
-              Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. Disability and Rehabilitation, 1–12. <a href="https://doi.org/10.1080/09638288.2024.2399221">doi: 10.1080/09638288.2024.2399221</a>
+              Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. Disability and Rehabilitation, 1–12. <a href="https://doi.org/10.1080/09638288.2024.2399221">https://doi.org/10.1080/09638288.2024.2399221</a>
             </p>
             <table>
                     <tr>
@@ -442,7 +442,7 @@
                     </tr>
               </table>
             <p>
-              Shrubsole, K., Stone, M., Cadilhac, D. A., Kilkenny, M. F., Power, E., Lynch, E., <b>Pierce, J. E.</b>, Copland, D., Godecke, E., Burton, B., Brogan, E. & Wallace, S. J. (2024). Establishing Quality Indicators and Implementation Priorities for Post-Stroke Aphasia Services Through End-User Involvement. Health expectations: an international journal of public participation in health care and health policy, 27(5), e14173. doi: <a href='doi.org/10.1111/hex.14173'>10.1111/hex.14173</a>
+              Shrubsole, K., Stone, M., Cadilhac, D. A., Kilkenny, M. F., Power, E., Lynch, E., <b>Pierce, J. E.</b>, Copland, D., Godecke, E., Burton, B., Brogan, E. & Wallace, S. J. (2024). Establishing Quality Indicators and Implementation Priorities for Post-Stroke Aphasia Services Through End-User Involvement. Health expectations: an international journal of public participation in health care and health policy, 27(5), e14173. <a href='doi.org/10.1111/hex.14173'>https://doi.org/10.1111/hex.14173</a>
             </p>
               <table>
                   <tr>
@@ -452,7 +452,7 @@
                   </tr>
               </table>
             <p>
-                Pallewela, N., Alahakoon, D., Adikari, A., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Optimizing Speech Emotion Recognition with Machine Learning Based Advanced Audio Cue Analysis. <i>Technologies, 12</i>(7), Article 7. https://doi.org/10.3390/technologies12070111
+                Pallewela, N., Alahakoon, D., Adikari, A., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Optimizing Speech Emotion Recognition with Machine Learning Based Advanced Audio Cue Analysis. <i>Technologies, 12</i>(7), Article 7. <a href="https://doi.org/10.3390/technologies12070111">https://doi.org/10.3390/technologies12070111</a>
             </p>
             <table>
                 <tr>
@@ -473,7 +473,7 @@
                         </tr>
                     </table>
             <p>
-                <b>Pierce, J. E.</b>, Cavanaugh, R., Harvey, S., Dickey, M. W., Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A. M., Carragher, M., Wilcox, C., & Rose, M. L. (2024). High-Intensity Aphasia Intervention Is Minimally Fatiguing in Chronic Aphasia: An Analysis of Participant Self-Ratings From a Large Randomized Controlled Trial. Stroke, 55.<a href='https://doi.org/10.1161/STROKEAHA.123.046031'>https://doi.org/10.1161/STROKEAHA.123.046031</a>
+                <b>Pierce, J. E.</b>, Cavanaugh, R., Harvey, S., Dickey, M. W., Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A. M., Carragher, M., Wilcox, C., & Rose, M. L. (2024). High-Intensity Aphasia Intervention Is Minimally Fatiguing in Chronic Aphasia: An Analysis of Participant Self-Ratings From a Large Randomized Controlled Trial. <i>Stroke, 55</i>(7).<a href='https://doi.org/10.1161/STROKEAHA.123.046031'>https://doi.org/10.1161/STROKEAHA.123.046031</a>
               </p>
               <table>
                         <tr>
@@ -483,7 +483,7 @@
                         </tr>
                     </table>
           <p>
-            Watanabe, M., Cartwright, J., & <b>Pierce, J. E.</b> (2024). Positive effects of speech and language therapy group interventions in primary progressive aphasia: A systematic review. International Journal of Language & Communication Disorders, <i>early online</i>. <a href='https://doi.org/10.1111/1460-6984.13031'>https://doi.org/10.1111/1460-6984.13031</a>
+            Watanabe, M., Cartwright, J., & <b>Pierce, J. E.</b> (2024). Positive effects of speech and language therapy group interventions in primary progressive aphasia: A systematic review. <i>International Journal of Language & Communication Disorders, 59</i>(5), 1832-1849. <a href='https://doi.org/10.1111/1460-6984.13031'>https://doi.org/10.1111/1460-6984.13031</a>
           </p>
           <table>
                     <tr>
@@ -503,7 +503,7 @@
                     </tr>
                 </table>
             <p>
-                Kim, J., Rose, M. L., <b>Pierce, J. E.</b>, Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Hurley, M., Foster, A., Carragher, M., Wilcox, C., & Cadilhac, D. A. (2024). High-intensity aphasia therapy is cost-effective in people with post-stroke aphasia: Evidence from the COMPARE trial. Stroke. <a href="https://doi.org/10.1161/STROKEAHA.123.045183">https://10.1161/STROKEAHA.123.045183</a>
+                Kim, J., Rose, M. L., <b>Pierce, J. E.</b>, Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Hurley, M., Foster, A., Carragher, M., Wilcox, C., & Cadilhac, D. A. (2024). High-intensity aphasia therapy is cost-effective in people with post-stroke aphasia: Evidence from the COMPARE trial. <i>Stroke, 55</i>(3), 705-714. <a href="https://doi.org/10.1161/STROKEAHA.123.045183">https://10.1161/STROKEAHA.123.045183</a>
             </p>
                 <table>
                     <tr>
@@ -516,7 +516,7 @@
                     </tr>
                 </table>
             <p>
-                Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. Aphasiology.
+                Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. <i>Aphasiology, 38</i>(4), 1351-1376.
                 <a href="https://doi.org/10.1080/02687038.2023.2282659">https://doi.org/10.1080/02687038.2023.2282659</a>
             </p>
                 <table>
@@ -543,7 +543,7 @@
                     </tr>
                 </table>
             <p>
-                Finch, E., <b>Pierce, J. E.</b>, Pais, A. M., Dow-Richards, C., Reed, A., Charalambous, M., Matos, M. A., Wallace, S. J., & Breitenstein, C. (2023). Preferences of people with post-stroke aphasia for aphasia research videos: An international project. <i>Aphasiology</i>, 0(0), 1–12. <a href="https://doi.org/10.1080/02687038.2023.2229030">https://doi.org/10.1080/02687038.2023.2229030</a>
+                Finch, E., <b>Pierce, J. E.</b>, Pais, A. M., Dow-Richards, C., Reed, A., Charalambous, M., Matos, M. A., Wallace, S. J., & Breitenstein, C. (2023). Preferences of people with post-stroke aphasia for aphasia research videos: An international project. <i>Aphasiology, 38</i>(4), 758-769. <a href="https://doi.org/10.1080/02687038.2023.2229030">https://doi.org/10.1080/02687038.2023.2229030</a>
             </p>
                 <table>
                     <tr>
@@ -557,7 +557,7 @@
                 </table>
 
             <p>
-                Adikari, A., Hernandez, N., Alahakoon, D., Rose, M. L., & <b>Pierce, J. E.</b> (2023). From concept to practice: a scoping review of the application of AI to aphasia diagnosis and management. <i>Disability and Rehabilitation</i>, 1-10. <a href="https://doi.org/10.1080/09638288.2023.2199463">https://doi.org/10.1080/09638288.2023.2199463</a>
+                Adikari, A., Hernandez, N., Alahakoon, D., Rose, M. L., & <b>Pierce, J. E.</b> (2023). From concept to practice: a scoping review of the application of AI to aphasia diagnosis and management. <i>Disability and Rehabilitation, 46</i>(7), 1288-1297. <a href="https://doi.org/10.1080/09638288.2023.2199463">https://doi.org/10.1080/09638288.2023.2199463</a>
             </p>
                 <table>
                     <tr>
@@ -604,7 +604,7 @@
                 A., Carragher, M., Wilcox, C., <b>Pierce, J. E</b>., Steel, G. (2022).
                 Results of the COMPARE trial of constraint-induced or multimodality aphasia
                 therapy compared with usual care in chronic poststroke aphasia. <i>Journal of
-                Neurology, Neurosurgery and Psychiatry, </i>93(6), 573-581. <a
+                Neurology, Neurosurgery and Psychiatry, 93</i>(6), 573-581. <a
                 href="https://doi.org/10.1136/jnnp-2021-328422">https://doi.org/10.1136/jnnp-2021-328422</a></p>
                 <p class="lineBreak"><a
                 href="https://www.youtube.com/watch?v=dT7Sic8Gimc">
@@ -708,7 +708,7 @@
                 <p>Harvey, S. R., Carragher, M., Dickey, M.
                 W., <b>Pierce, J. E</b>., &amp; Rose, M. L. (2020). Treatment dose in
                 post-stroke aphasia: A systematic scoping review. <i>Neuropsychological
-                Rehabilitation</i>, 31(10), 1629-1660. <a
+                Rehabilitation, 31</i>(10), 1629-1660. <a
                 href="https://doi.org/10.1080/09602011.2020.1786412">https://doi.org/10.1080/09602011.2020.1786412</a>
                 <br>
                 <a
