--- a/CV.html
+++ b/CV.html
@@ -516,7 +516,7 @@
                     </tr>
                 </table>
             <p>
-                Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. <i>Aphasiology, 38</i>(4), 1351-1376.
+                Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J. E.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. <i>Aphasiology, 38</i>(4), 1351-1376.
                 <a href="https://doi.org/10.1080/02687038.2023.2282659">https://doi.org/10.1080/02687038.2023.2282659</a>
             </p>
                 <table>
@@ -871,7 +871,7 @@
             </div>
                 <p><b>Pierce, J. E.</b>, Adikari, A., Pallewela, N., Hernandez, N., Rose, M., Alahakoon, D. (September, 2024). <i>Artificial Intelligence for Aphasia: Opportunities, Challenges and Risks.</i> British Aphasiology Society International Conference, Leicester, United Kingdom.</p>
                 <p><b>Pierce, J. E.</b>, Eley, E., Pitt, R., Wong, D., Hill, A., Rose, M. L. (July, 2024). <i>Adapting Group-Based Aphasia Treatment for Telehealth: Development and Evaluation of Multi-Modality Aphasia Therapy Tele.</i> International Aphasia Rehabilitation Conference, Brisbane, Australia.</p>
-                <p>Wong, D., Rose, A., Blake, J., Power, E., Kneebone, I., Stolwyk, R., Gracey, F., Thomas, S., <b>Pierce, J.</b>, & Evans, J. (May, 2024). Towards accessible, tailored assessment of mood in people with moderate-severe cognitive and communication impairments following acquired brain injury. [Datablitz presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.</p>
+                <p>Wong, D., Rose, A., Blake, J., Power, E., Kneebone, I., Stolwyk, R., Gracey, F., Thomas, S., <b>Pierce, J. E.</b>, & Evans, J. (May, 2024). Towards accessible, tailored assessment of mood in people with moderate-severe cognitive and communication impairments following acquired brain injury. [Datablitz presentation]. 21st Neuropsychological Rehabilitation Special Interest Group, World Federation of Neurorehabilitation (NR-SIG-WFNR) conference, Coimbra, Portugal.</p>
                 <p><b>Pierce, J. E.</b>, Hill, A., Wong, D., Pitt, R., Rose, M. (November, 2023). <i>Co-design and testing of Multi-Modality Aphasia Therapy Tele, a telehealth adaptation of an evidence-based, group aphasia intervention.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
                 <p><b>Pierce, J. E.</b> (November, 2023). <i>Exploring AI-generated images for aphasia therapy and assessments.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
                 <p><b>Pierce, J. E.</b>, Lazzarotto, M. T., Vuong, G., & Kambanaros, M. (November, 2023). <i>Development of free online aphasia therapy for Mandarin, Vietnamese, and Greek speakers.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
@@ -1086,7 +1086,7 @@
                 <div class="rightColMask"></div>
             </div>
                 <div class="poster">
-                    Werner, L., Hußmann, K., Peitz, D., <b>Pierce, J. E</b>. (November, 2024). Mediengestütztes Eigentraining bei Aphasie mit aphasiatherapyonline.com: Erstellung und Erprobung der deutschen Version [Poster]. Gesellschaft für Aphasieforschung und -behandlung, Leipzig, Germany.
+                    <p>Werner, L., Hußmann, K., Peitz, D., <b>Pierce, J. E</b>. (November, 2024). Mediengestütztes Eigentraining bei Aphasie mit aphasiatherapyonline.com: Erstellung und Erprobung der deutschen Version [Poster]. Gesellschaft für Aphasieforschung und -behandlung, Leipzig, Germany.</p>
                 </div>
                 <div class="poster">
                     <p>Adikari, A., <b>Pierce, J. E.</b>, Pallewela, N., Wong, D., Kneebone, I., Ryan, B., Hernandez, N., Bremner, T., Bremner, S., Barron, K., Alahakoon, D., Rose, M. (July, 2024). The Mood Tracker app – a co-designed tool for aphasia-friendly monitoring and management of mood. [Poster]. International Aphasia Rehabilitation Conference, Brisbane, Australia.
