--- a/CV.html
+++ b/CV.html
@@ -1285,7 +1285,7 @@
             </div>
                 <p>Marking of honours thesis for Sydney University (by invitation)</p>
                 <p>Marking of final year thesis for National University of Singapore (by invitation)</p>
-                <p >Aphasia intervention (2022-2023).
+                <p >Aphasia intervention (2022-2024).
                 Class delivered to PhD neuropsychology students by invitation, Monash
                 University.</p>
                 <p >Creation of lectures, tutorials and online content for three-week unit on
@@ -1382,7 +1382,7 @@
                   <p><a
                   href="https://www.researchgate.net/profile/John-Pierce/">ResearchGate</a>
                 </p>
-                  <p>97,000 paper reads
+                  <p>>100,000 paper reads
                   </p>
                   </td>
                  </tr>
@@ -1396,6 +1396,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <p>Organising committee for Digital Health Week, 2025.</p>
             <p>Presented at Stroke Foundation fundraising event, March 2024</p>
             <p>Organising committee member for the Aphasiology Symposium of Australasia, Nov 2023.</p>
             <p>Set up <a
@@ -1428,7 +1429,7 @@
                 <ul>
                     <li>Arabic <b>(complete)</b></li>
                     <li>Greek (complete)</li>
-                    <li>German</li>
+                    <li>German (complete)</li>
                     <li>Hindi</li>
                     <li>Mandarin <b>(complete)</b></li>
                     <li>European Portuguese <b>(complete)</b></li>
@@ -1474,10 +1475,10 @@
             Trialists workshop on creating video abstracts. 2021.</p>
         </div>
         <div class="clear"></div>
-        <div class="leftCol">
+        <div class="leftCol" style="display: none;">
             <div id="collaboration">Collaboration (Published papers)</div>
         </div>
-        <div class="rightCol" id="Collaboration">
+        <div class="rightCol" id="Collaboration" style="display: none;">
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
