--- a/CV.html
+++ b/CV.html
@@ -1275,7 +1275,8 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <p>Currently co-supervising four full-time PhD candidates, three honours students</p>
+            <p>Currently co-supervising four full-time PhD candidates, two honours students.</p>
+            <p>One honours student successfully completed.</p>
         </div>
         <div class="clear"></div>
         <div class="leftCol">
@@ -1339,7 +1340,7 @@
         </div> -->
             <div class="clear"></div>
         <div class="leftCol">
-            <div id="researchimpactheader">Researcher Profile</div>
+            <div id="researchimpactheader">Researcher Impact</div>
         </div>
         <div class="rightCol" id="researchImpact">
             <div class="rightColMask-container">
@@ -1389,6 +1390,8 @@
                   </td>
                  </tr>
                 </table>
+            <p>Speech Pathology Australia Podcast episode: <a href="https://soundcloud.com/speechpathologyaustralia/multi-modality-aphasia-treatment-and-telepractice-s6e41">Multi-Modality Aphasia Treatment and Telepractice S6E41</a></p>
+            <p><a href="https://latrobeuni-my.sharepoint.com/:u:/g/personal/jpierce_ltu_edu_au/EbgH0LT6Hf9Ki5R7WHqyeKwBgzrNjcq7ybIAnWaydpw_Jw?e=upunQC">Interview - ABC Radio Western Plains</a></p>
         </div>
         <div class="clear"></div>
         <div class="leftCol">
