--- a/index.html
+++ b/index.html
@@ -40,11 +40,26 @@
       </svg>
 <!-- External links -->
     <div class="externalLinks">
-        <a href="http://www.twitter.com/johnpierce85" id="twitter" target="_blank">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
-            </svg>
-            <div class="externalLinkLabel">twitter</div> -->
+        <a href="http://www.twitter.com/johnpierce85" id="bluesky" target="_blank">
+            <svg width="16" height="16" version="1.1" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                    <linearGradient id="twitterGradient" x1="0%" y1="0%" x2="100%" y2="100%"  >
+                        <stop offset="40%" style="stop-color:#1DA1F2;stop-opacity:1.00" />
+                        <stop offset="80%" style="stop-color:#0681ec;stop-opacity:1.00" />
+                  </linearGradient> 
+                  <mask id="blueskyicon">
+                    <path fill="white"  class="cls-1" d="M3.6,2.1c1.8,1.3,3.7,4.1,4.4,5.5.7-1.5,2.6-4.2,4.4-5.5,1.3-1,3.4-1.7,3.4.7s-.3,4-.4,4.6c-.6,2-2.6,2.5-4.4,2.2,3.2.5,4,2.3,2.2,4.1-3.3,3.4-4.7-.8-5.1-1.9,0-.2,0-.3,0-.2,0,0,0,0,0,.2-.4,1.1-1.8,5.3-5.1,1.9-1.7-1.8-.9-3.6,2.2-4.1-1.8.3-3.8-.2-4.4-2.2-.2-.6-.4-4.1-.4-4.6C.2.3,2.3,1.1,3.6,2.1h0Z"/>
+                </mask> 
+                </defs>
+                <g mask="url(#blueskyicon)">
+                    <rect x="0" y="0" width="16" height="16" fill="currentColor" />
+                    <rect id="svgBase" x="0" y="0" width="16" height="16" fill="url(#twitterGradient)" />
+                  </g>
+              </svg>
+              <div class="externalLinkLabel">bluesky</div>
+        </a>      
+           </svg>
+        <!-- <a href="http://www.twitter.com/johnpierce85" id="twitter" target="_blank">
             <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg">
                 <defs>
                     <linearGradient id="twitterGradient" x1="0%" y1="0%" x2="100%" y2="100%"  >
@@ -54,15 +69,6 @@
                   <mask id="twitterIcon">
                     <path fill="white" d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                   </mask> 
-                  <!-- <clipPath id="the-object">
-                    <path fill="currentColor" d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z">
-                </path>
-                  </clipPath>
-                  <filter id="noise">
-                        <feTurbulence type="fractalNoise" baseFrequency="5" result="noisy" />
-                        <feColorMatrix type="saturate" values="0"/>
-                        <feBlend in="SourceGraphic" in2="noisy" mode="multiply" opacity=".01"/>
-                  </filter> -->
                   
                 </defs>
                 <g mask="url(#twitterIcon)">
@@ -71,7 +77,7 @@
                   </g>
               </svg>
               <div class="externalLinkLabel">twitter</div>
-        </a>
+        </a> -->
         <a href="https://www.youtube.com/@johnepierce" id="youtube" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-youtube" viewBox="0 0 16 16">
                 <defs>
@@ -135,8 +141,8 @@
                 </metadata>
                 <defs>
                     <linearGradient id="CVGradient" x1="0%" y1="50%" x2="100%" y2="50%"  >
-                        <stop offset="10%" style="stop-color:hsl(273,48%,53%);stop-opacity:1.00" />
-                        <stop offset="100%" style="stop-color:hsl(273,58%,42%);stop-opacity:1.00" />
+                        <stop offset="10%" style="stop-color:#82B9A4;" />
+                        <stop offset="100%" style="stop-color:#7cc4a9" />
                   </linearGradient>
                   <mask id="CVIcon">
                     <path d="m3.2.02c-.36.04-.72.2-1,.43-.27.22-.52.61-.62.98l-.05.2v12.69l.05.2c.16.6.63,1.11,1.21,1.31.36.12.24.12,5.2.12s4.85,0,5.2-.12c.31-.1.66-.36.85-.61.15-.2.29-.47.35-.7l.06-.21V1.63l-.06-.21c-.21-.77-.83-1.3-1.64-1.4C12.51,0,3.46,0,3.2.02Zm5.16,2.52c.25.06.48.15.67.29.41.28.67.64.83,1.13.05.16.06.23.05.53,0,.32,0,.37-.07.56-.08.24-.15.38-.29.61-.06.09-.11.17-.11.17s.08.05.18.11c.73.4,1.36,1.17,1.63,2,.11.32.14.53.1.69-.03.14-.06.17-.22.26l-.11.06h-3.08c-3.49.01-3.21.03-3.38-.18-.13-.16-.14-.25-.06-.55.14-.58.32-.96.7-1.44.27-.33.71-.69,1.09-.87.16-.08.18-.09.12-.14-.07-.06-.26-.39-.32-.55-.17-.47-.17-1.02,0-1.45.25-.62.79-1.08,1.44-1.23.19-.04.63-.04.82,0Zm3.77,7.94c.44.12.44.82,0,.94-.12.03-8.15.03-8.27,0-.43-.12-.45-.78-.03-.93.08-.03.78-.03,4.15-.04,2.72,0,4.09,0,4.15.02Zm-.03,1.98c.24.05.38.25.36.5-.01.18-.08.31-.2.38l-.1.07H3.83l-.1-.07c-.12-.08-.2-.24-.2-.41,0-.26.14-.43.39-.49.14-.03,8.07-.02,8.19,0Z" style="fill:#fff;"/><path d="m7.57,3.55c-.25.09-.45.27-.58.53-.06.13-.07.16-.07.4s0,.28.08.43c.15.33.46.54.81.57.43.03.8-.18.99-.57.07-.15.08-.17.07-.41,0-.22,0-.27-.07-.39-.12-.27-.33-.46-.59-.55-.18-.06-.48-.06-.65,0Z" style="fill:#fff;"/><path d="m7.5,6.51c-.57.11-1.06.37-1.45.79-.16.17-.45.61-.43.65.02.03,4.55.02,4.55,0,0-.04-.14-.29-.27-.46-.16-.22-.48-.52-.71-.65-.49-.29-1.15-.42-1.69-.32Z" style="fill:#fff;"/>
@@ -154,8 +160,8 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" style="transform: scale(0.76);">
                 <defs>
                     <linearGradient id="emailGradient" x1="0%" y1="0%" x2="0%" y2="100%"  >
-                        <stop offset="10%" style="stop-color:hsl(0, 3.1%, 50.2%);" />
-                        <stop offset="100%" style="stop-color:hsl(20, 20.3%, 29%)" />
+                        <stop offset="10%" style="stop-color:hsl(273,48%,53%);stop-opacity:1.00" />
+                        <stop offset="100%" style="stop-color:hsl(273,58%,42%);stop-opacity:1.00" />
                   </linearGradient>
                   <mask id="emailIcon">
                     <path d="m15.83,3.34l-1,.91-4.2,3.83,4.2,3.76.97.87h0c.11-.22.17-.47.17-.72v-7.97c0-.23-.05-.46-.14-.68h0Z" style="fill:#fff;"/><path d="m9.79,8.84l-.64.58c-.32.29-.73.45-1.16.45s-.84-.16-1.16-.45l-.63-.58-4.12,3.71-1.08.97c.22.11.47.17.72.17h12.53c.26,0,.51-.06.75-.18l-1.08-.96-4.14-3.71Z" style="fill:#fff;"/><path d="m5.37,8.07L1.17,4.2l-.97-.9c-.11.22-.17.47-.17.72v7.97c0,.26.06.51.18.75l.96-.87,4.2-3.79Z" style="fill:#fff;"/><path d="m7.61,8.58c.1.1.24.15.39.15s.28-.06.39-.15l6.67-6.08h0c-.25-.13-.52-.19-.79-.2H1.74c-.26,0-.52.06-.75.18l1.05.96,5.58,5.14Z" style="fill:#fff;"/>
